casestudy/custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-deployment
  labels:
    app: custom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom
  template:
   metadata:
     labels:
       app: custom
   spec:
     containers:
      - name: custom
        image: anujsingh29/kube-casestudy
        ports:
        - containerPort: 80
