casestudy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apache
        backend:
          serviceName: apache2
          servicePort: 80
      - path: /custom
        backend:
          serviceName: custom
          servicePort: 80
